package main.java.entities;

public enum MatType {
    AXIOM,
    COROLLARY,
    LEMMA,
    DEFINITION,
    SOURCE,
    THEOREM,
    TOPIC
}
